--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.fairphone.psensor"
-    android:sharedUserId="android.uid.system"
-    android:versionCode="2"
-    android:versionName="FP2 1.1">
+    android:sharedUserId="android.uid.system">
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -12,29 +10,36 @@
 
      <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
      <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-     <uses-permission android:name="android.permission.DEVICE_POWER" tools:ignore="ProtectedPermissions"/>
-     <uses-permission android:name="android.permission.REBOOT" tools:ignore="ProtectedPermissions"/>
+     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+     <uses-permission android:name="android.permission.DEVICE_POWER"
+         tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.STOP_APP_SWITCHES" />
+    <uses-permission android:name="android.permission.REBOOT" tools:ignore="ProtectedPermissions"/>
      
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Settings">
-        
-        <receiver android:name=".PSENSOR_reciver" >
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+        android:theme="@style/AppTheme">
+
+        <activity android:name="com.fairphone.psensor.UpdateFinalizerActivity"
+            android:excludeFromRecents="true"
+            android:screenOrientation="portrait">
+            <intent-filter android:priority="1">
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.DEVICE_INITIALIZATION_WIZARD"/>
+                <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
 
-            <!-- Secret keycode to launch APK *#*#8765#*#* -->
+        <activity android:name="com.fairphone.psensor.UpdateFinalizerActivityFromNotification"
+            android:excludeFromRecents="true"
+            android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.provider.Telephony.SECRET_CODE" />
-
-                <data
-                    android:host="8765"
-                    android:scheme="android_secret_code" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </receiver>
+        </activity>
 
         <activity
             android:name=".DiagnosticsActivity"
@@ -54,6 +59,21 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name="com.fairphone.psensor.BootUpReceiver"
+            android:enabled="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.ACTION_SHUTDOWN" />
+                <action android:name="android.intent.action.QUICKBOOT_POWEROFF" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="com.fairphone.psensor.UpdateFinalizerService"
+            android:exported="false"></service>
 
     </application>
 
