--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.fairphone.psensor"
-    android:sharedUserId="android.uid.system">
+    android:sharedUserId="android.uid.system"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -15,13 +17,14 @@
          tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.STOP_APP_SWITCHES" />
     <uses-permission android:name="android.permission.REBOOT" tools:ignore="ProtectedPermissions"/>
-     
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
         <activity android:name="com.fairphone.psensor.UpdateFinalizerActivity"
+            android:enabled="false"
             android:excludeFromRecents="true"
             android:screenOrientation="portrait">
             <intent-filter android:priority="1">
@@ -73,6 +76,7 @@
 
         <service
             android:name="com.fairphone.psensor.UpdateFinalizerService"
+            android:enabled="false"
             android:exported="false"></service>
 
     </application>
