Use the Android Settings icon sa the app icon
Change-Id: Ic7429b6ea9eeefd0a973642731d7ef675d19783a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:icon="@mipmap/ic_launcher_settings">
 
         <activity android:name="com.fairphone.psensor.UpdateFinalizerActivity"
             android:enabled="false"
