--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:icon="@mipmap/ic_launcher_settings">
+        android:icon="@mipmap/ic_launcher_settings"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name="com.fairphone.psensor.UpdateFinalizerActivity"
             android:enabled="false"
@@ -78,7 +79,7 @@
         <service
             android:name="com.fairphone.psensor.UpdateFinalizerService"
             android:enabled="false"
-            android:exported="false"></service>
+            android:exported="false" />
 
     </application>
 
