--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_psensor"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name="com.fairphone.psensor.UpdateFinalizerActivity"
