--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.fairphone.psensor"
         minSdkVersion 22
         targetSdkVersion 22
-        versionCode 20099
-        versionName "2.0"
+        versionCode 20200
+        versionName "2.2.0"
     }
     buildTypes {
         release {
@@ -21,6 +21,12 @@ android {
     }
     productFlavors {
     }
+      lintOptions {
+          checkReleaseBuilds false
+          // Or, if you prefer, you can continue to check for errors in release builds,
+          // but continue the build even when errors are found:
+          abortOnError false
+      }
 }
 
 dependencies {
