--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
+        android:label="@string/app_full_name"
         android:theme="@style/AppTheme"
         android:icon="@mipmap/ic_launcher_psensor"
         tools:ignore="GoogleAppIndexingWarning">
