Add a new service to handle the change of a receiver module
Changing a receiver module triggers a (persistent) notification offering
the user a new calibration. This offer cannot be ignored, only delayed.
it will show up again on next boot or after one day if the user asks for a
reminder. Completing the calibration will remove the notification for good.

When clicked, the notification will start a new activity displaying the two
possible actions: setting a reminder or executing the calibration. If the
user chooses so, the regular calibration activity is started.

FPIIM-1575

Change-Id: Ia12dcf87eca06f115212e01368b457465fdd01fa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
     <uses-permission android:name="android.permission.STOP_APP_SWITCHES" />
     <uses-permission android:name="android.permission.REBOOT" tools:ignore="ProtectedPermissions"/>
 
+    <permission
+        android:name="com.fairphone.psensor.permission.CALIBRATE_PROXIMITY_SENSOR"
+        android:protectionLevel="signature" />
+
     <application
         android:allowBackup="true"
         android:label="@string/app_full_name"
@@ -65,6 +69,15 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ReceiverModuleChangedActivity"
+            android:label="@string/receiver_module_changed_title"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <receiver
             android:name="com.fairphone.psensor.BootUpReceiver"
             android:enabled="true"
@@ -81,6 +94,11 @@
             android:enabled="false"
             android:exported="false" />
 
+        <service
+            android:name=".CalibrationService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="com.fairphone.psensor.permission.CALIBRATE_PROXIMITY_SENSOR" />
     </application>
 
 </manifest>
