--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,37 @@ android {
       }
 }
 
+/*
+ * Configures how to sign release builds
+ *
+ * Reads configuration from a file keystore.propertes if it exists. Falls back
+ * to the default development keys otherwise (by doing nothing).
+ */
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+
+if (keystorePropertiesFile.exists()) {
+
+    // Load keystore properties from file if it exists
+    def keystoreProperties = new Properties()
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+    android {
+        signingConfigs {
+            release {
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storeFile file(keystoreProperties['storeFile'])
+                storePassword keystoreProperties['storePassword']
+            }
+        }
+        buildTypes {
+            release {
+                signingConfig signingConfigs.release
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
