--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.fairphone.psensor"
         minSdkVersion 22
-        targetSdkVersion 23
+        targetSdkVersion 28
         versionCode 20203
         versionName "2.2.3"
     }
@@ -62,6 +61,5 @@ if (keystorePropertiesFile.exists()) {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:support-v13:23.4.0'
-    implementation 'com.android.support:support-v4:23.4.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
