Fix starting of background processes
Removed all IntentServices and replace them either with a
BroadcastReceiver to receive commands from another app(ModuleDetect), or
Workers.

Issue: FP2P-290
Change-Id: I06dc0b27fd32351b1afb7be0b7de20ffc2c32289

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
         </activity>
 
         <receiver
-            android:name="com.fairphone.psensor.BootUpReceiver"
+            android:name="com.fairphone.psensor.receivers.BootUpReceiver"
             android:enabled="true"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
             <intent-filter>
@@ -83,16 +83,13 @@
             </intent-filter>
         </receiver>
 
-        <service
-            android:name="com.fairphone.psensor.UpdateFinalizerService"
-            android:enabled="false"
-            android:exported="false" />
+        <receiver android:name=".receivers.ProximitySensorBroadcastReceiver"  android:exported="true"
+            android:permission="com.fairphone.psensor.permission.CALIBRATE_PROXIMITY_SENSOR">
+            <intent-filter>
+                <action android:name="com.fairphone.psensor.receivers.ACTION_HANDLE_RECEIVER_MODULE_CHANGED" />
+            </intent-filter>
+        </receiver>
 
-        <service
-            android:name=".CalibrationService"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="com.fairphone.psensor.permission.CALIBRATE_PROXIMITY_SENSOR" />
     </application>
 
 </manifest>
