--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ if (keystorePropertiesFile.exists()) {
 }
 
 dependencies {
+    def work_version = "2.3.4"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.work:work-runtime:$work_version"
 }
