Add notification channels
Since A8 all notifications must be assigned to a channel.

Issue: FP2P-394
Change-Id: I05783442847fe3a57758f73f1c9cb7f993af1e9c

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:protectionLevel="signature" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:label="@string/app_full_name"
         android:theme="@style/AppTheme"
