Disable app backup
The linter is complaining about missing backup-related settings. Disable
backups completely instead, as this tool's data is device-specific not
user/Google-account-specific.

Change-Id: I88c98a5a060f20c559b318c73615fffadf716773

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:name=".App"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:label="@string/app_full_name"
         android:theme="@style/AppTheme"
         android:icon="@mipmap/ic_launcher_psensor"
