--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     defaultConfig {
         applicationId "com.fairphone.psensor"
         minSdkVersion 22
+        //noinspection OldTargetApi
         targetSdkVersion 28
         versionCode 20302
         versionName "2.3.2"
