Explicitly use own permission CALIBRATE_PROXIMITY_SENSOR
We're using this permission, so declare it in the manifest accordingly.
This doesn't change anything functionally, because the frameworks does
not check this permissions on apps running as android.uid.system.
Anyway, explicitly using it here makes more obvious what's going on.

Change-Id: I3e6c15996caed258938140f6b06b202a7c43cade

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
     <permission
         android:name="com.fairphone.psensor.permission.CALIBRATE_PROXIMITY_SENSOR"
         android:protectionLevel="signature" />
+    <!-- This permission is enforced on both sides, sending (ModuleDetect) and receiving
+      (ProximitySensor), therefore we declare uses-permission on it as well.
+      Note that this is not strictly needed on apps running as user android.uid.system. -->
+    <uses-permission android:name="com.fairphone.psensor.permission.CALIBRATE_PROXIMITY_SENSOR" />
 
     <application
         android:name=".App"
